--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- Friend's Section 1 -->
     <div class="sec-1">
       <div>
-        <h2>Meet Surface Pro</h2>
+        <h2>Meet Gupta Ji Pro</h2>
         <p>
           This laptop's unrivalled flexibility and AI features like Live
           Captions and Cocreator, enable you to do more than you ever
